# ritmo

./: .env  3d_pcb.html  Cargo.toml  README.md  build.rs
.sqlx/: query-0125a2707c438509e2d3090025347b8dbb8e8d54dc77d2ae9f5a825a5191b22f.json  query-04ddf9394ed12b3f7b795da28c7bdbb58fdbecdd32b9e4e50144d2a329fe5415.json  query-0d696a4709036bda53d7966280d2ce0e6330f925650d6bafc1330fbd9a93c228.json  query-19f6989401aeb5664b1c4ee2a293d56ff0d963832f08529d2cd49bdc8d3d2145.json  query-2cc5e6d65b3dcff9d27814062ff77f0cd64b5f9ebf9338720bd3e79458460af5.json  query-2e88a9a54e54799775d9716aaf866498c7353d2cf0bdbb271615c121542b3ad8.json  query-2f68ddcc6d3378b0dffb6289f98d0ade1f056cdae1260dfe50f31f816194fdb4.json  query-49221ff0cbb9f049a6367fdd17e7ca514d9fc3307277da3a8e311324b880736a.json  query-69fb7d74393243fd88fa4cb67fa723c4dcc7a3c5796df2b17aa69c5b49e2091b.json  query-6e5900df359dc3c241428ebf5b2e5f05ecd4cf86294a77183c096bacab7f7464.json  query-74b5026d759e4c42aadf12ef5ec128bf39c4f588e9805543740ff61eeb3a9f43.json  query-7d420b5900df8c7f5312df26ee050ecc5da8c7b8603671149a572e08ccb07547.json  query-84941f4c7d2e6d8cf44f81fa96731b9ea26fa3a56752c7b2dd6d7e1dd27a50af.json  query-899987f2481b54ff6be20bf7fdbbf71fa2229c0d74bb37d0c7a608c4862f4eb9.json  query-922207ccc6fcce3ce8f79983ef370ba724f4f760dc3c680d9e3f0008c3ad8f9b.json  query-96fab5408bed592b930e89c0d214a864059bfddc9a98febda2191b1e93b90934.json  query-972c05f64fb2657e5cef18341b80a4e2f0bfc8b40c7221a980bb5591b033b7d2.json  query-9e24b6a3162d49b4c3861cc30a570179e894bcf91af052a9b90c6d0e2d05d0e3.json  query-a18cb9bd92f39ee1cfbd66254e94c5293101204cd854249e86d1bf6ddd01a442.json  query-ad47e8301d183d0ce43938320e40b07da52b855c12bca2738c46f34517fda716.json  query-bd6e752e9c598c6e9b22f64d9d4cfb90b77f63c70a0209b6fc972fea55f1425e.json  query-d7b7819e01af82f0901d9a4f039c993f888cd4e4e1278505f2c2a68d03014370.json  query-e67d80a8399f4b59e7c30c48726256cbaffed64d4394bbe4c40aafedfd040239.json  query-e6dc5fe82110d6b7b8192b15a1a5a461d33050b6dda432aa8376586e7bd7e6fa.json  query-ea4d5165ae69c740af8ca7939d7e8aa4551e6ca3d3ef4234afbbc695cd33844b.json  query-f828341ccbc4e029c1ef9a8bba1416ab3cdf4af0b94de5e2e393e671f5f6c25c.json  query-ff034ddce35108da9edef97018fd2e3a9d2b7c68e6ff5b1ce4fc1fbed2c8df01.json
db002/: ritmo.db
migrations/: 0002_new_lang.sql  01__ritmo.sql  20250227161613_init.down.sql  20250227161613_init.up.sql  20250228075154_lang_id.down.sql  20250228075154_lang_id.up.sql  20250228091627_lang_id2.up.sql  20250228095615_seeding.down.sql  20250228095615_seeding.up.sql  20250228162426_books_corr_series.up.sql  20250304102335_lang_col_name.up.sql  20250305143017_lang_tables.down.sql  20250305143017_lang_tables.up.sql  20250305152904_lang_tables_correction.up.sql  20250306080329_init.sql
resources/: iso-639-2.tab
scripts/: generate_constants.py
src/: errors.rs  main.rs
src/connection/: connection.rs
src/db/: connection.rs  db_fill.rs  db_schema.rs  db_structs.rs  do_filter.rs  mod.rs  query_builder.rs  query_conditions.rs  seeding.rs  verify_path.rs
src/filters/: constants.rs  mod.rs
src/import/: import_books.rs  import_books_tags.rs  mod.rs  (+8 more)
(+150 files in other folders)
