[package]
name = "ritmo"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.77"
clap = { version = "4.5.26", features = ["derive"] }
futures-util = "0.3.31"
serde = { version = "1.0.217", features = ["derive"] }

# Pin sea-orm to the *exact* same version as sea-orm-migration
sea-orm = {version = "=0.12.15", features = ["debug-print"]}
sea-orm-migration = { version = "0.12.15", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }

thiserror = "2.0.11"
strsim = "0.11.1"
unicode-normalization = "0.1.24"
#sqlx = { version = "0.7", features = ["sqlite"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] } # CRUCIAL: sqlite for sqlx as well!
tokio = { version = "1.43.0", features = ["full"] }
chrono = "0.4.39"
csv = "1.3.1"
rayon = "1.10.0"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
log = "0.4.25"

[features]
default = ["sqlite"]
sqlite = [] #  empty, or could include other features for ritmo itself if needed

