[package]
name = "ritmo"
version = "1.0.0"
edition = "2021"

[dependencies]
async-trait = "0.1.77"
clap = { version = "4.5.26", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }

thiserror = "2.0.11"
strsim = "0.11.1"
unicode-normalization = "0.1.24"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.43.0", features = ["full"] }
chrono = "0.4.39"
csv = "1.3.1"
rayon = "1.10.0"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
log = "0.4.25"

[features]
default = ["sqlite", "runtime-tokio-rustls"]
sqlite = [] #  empty, or could include other features for ritmo itself if needed
runtime-tokio-rustls = ["sqlx/runtime-tokio-rustls"]

[dev-dependencies]
sqlx-cli = { version = "0.7", features = ["sqlite"] }

[profile.release]
lto = true
opt-level = "z"
strip = true